# readme_genie

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  generate-readme.sh  loadConfig.py  logging_config.py  output_readme.md  pyproject.toml  readme_genie.py  requirements.txt  setup.py  test.py
.github/workflows/: pypi-publish.yml  python-app.yml
examples/javascript/: README.md  routes.js
examples/python/: README.md  classes.py  main_example.py
models/: cohere_api.py  groq_api.py  model.py
src/: loadConfig.py  readme_genie.py
src/examples/javascript/: server.js
src/examples/python/: README.md  classes.py  main_example.py
src/models/: cohere_api.py  groq_api.py  model.py
tests/: test_cohere_api.py  test_groq_api.py  test_loadConfig.py  test_model.py  test_parse_arg.py  test_readme_genie.py  test_runner.py
