# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ReadmeGenie"
description = "A tool to generate README files effortlessly"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Henrique Sagara", email = "henrique.sagara@hotmail.com" }
]
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "src/_version.py"

[project.urls]
Homepage = "https://github.com/HTSagara/readme_genie"
Documentation = "https://github.com/HTSagara/readme_genie/blob/main/README.md"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
exclude = [
    "venv/",
    "__pycache__/"
]
fix = true
select = ["F", "E", "W", "B", "I", "S"]
ignore = ["E501", "E203", "E231"]

[tool.coverage.run]
source = ["."]
branch = true
omit = ["tests/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]