[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ReadmeGenie"
description = "A tool to generate README files effortlessly"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]  # Add this line to indicate version is dynamic
authors = [
    { name = "Henrique Sagara", email = "henrique.sagara@hotmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "cohere",
    "colorama",
    "groq",
    "python-dotenv",
    "toml",
]

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "src/_version.py"

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "ruff>=0.2.0",
    "pre-commit>=3.5.0",
    "coverage>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/HTSagara/readme_genie"
Documentation = "https://github.com/HTSagara/readme_genie/blob/main/README.md"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
exclude = [
    "venv/",
    "__pycache__/"
]
fix = true
select = ["F", "E", "W", "B", "I", "S"]
ignore = ["E501", "E203", "E231", "E402"]

[tool.coverage.run]
source = ["."]
branch = true
omit = ["tests/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]